# smoke-recon

./: .gitignore  AGENTS.md  README.md
.github/workflows/: deploy.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  speckit.manifest.json
.specify/templates/: plan-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
.speckit/: constitution.md
.speckit/specs/: early_smoke.md  early_smoke_architecture.md
api/: Dockerfile  README.md  config.yaml  pyproject.toml
api/app/: __init__.py  config.py  db.py  main.py
api/app/features/early_smoke/: __init__.py  breakout.py  broadcaster.py  circuit_breaker.py  ddg_worker.py  dictionary.py  executor.py  init_db.py  matcher.py  media_pipeline.py  models.py  pipeline.py  purge.py  reddit_worker.py  router.py  rss_worker.py  scheduler.py  schemas.py  scrapy_spiders.py  twitter_worker.py
api/app/features/early_smoke/tests/: test_breakout.py  test_ingestion.py  test_purge.py
specs/001-early-smoke/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/001-early-smoke/checklists/: requirements.md
specs/001-early-smoke/contracts/: api.md
stitch_screens/: 1_dashboard.html  2_asset_detail.html  3_matrix_config.html  4_live_logs.html
ui/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
ui/public/: manifest.json  sw.js
ui/src/: App.tsx  index.css  main.tsx
ui/src/features/early_smoke/: README.md  types.ts
ui/src/features/early_smoke/components/: ActivityConsole.tsx  (+4 more)
(+5 files in other folders)
