[project]
name = "alpha-smoke-recon-api"
version = "0.1.0"
description = "Early Smoke Reconnaissance Engine API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.28",
    "rapidfuzz>=3.6.2",
    "spacy>=3.7.4",
    "praw>=7.7.1",
    "scrapy>=2.11.1",
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",
    "duckduckgo-search>=5.3.0",
    "pyyaml>=6.0.1",
    "pydantic-settings>=2.2.1",
    "apscheduler>=3.11.2",
    "numpy<2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
